fix #406 Scrollbars in splitter with nested templates
Extra scrollbars are displayed when templates are nested inside a splitter widget

--- a/src/aria/templates/GlobalStyle.tpl.css
+++ b/src/aria/templates/GlobalStyle.tpl.css
@@ -65,6 +65,14 @@
     overflow-y: auto;
 }
 
+.xOverflowXScroll {
+    overflow-x: scroll;
+}
+
+.xOverflowYScroll {
+    overflow-y: scroll;
+}
+
 .xOverflowXHidden {
     overflow-x: hidden;
 }
